--- a/main.tex
+++ b/main.tex
@@ -5,36 +5,44 @@
 \parindent 10pt
 \oddsidemargin 0.85cm
 \evensidemargin 0.37cm
+
 \begin{document}
 \thispagestyle{empty}
+
 \begin{center}
-Vrije Universiteit Amsterdam
 \vspace{1mm}
-\includegraphics[height=28mm]{vu-griffioen.pdf}
-\vspace{1.5cm}
+\includegraphics[height=28mm]{resources/logo-vua.pdf}
+\vspace{1cm}
+
 {\Large Bachelor Thesis}
-\vspace*{1.5cm}
+\vspace{1cm}
+
 \rule{.9\linewidth}{.6pt}\\[0.4cm]
-{\huge \bfseries Title of the Thesis\par}
-{\huge \bfseries Comes Here\par}\vspace{0.4cm}
+{\huge \bfseries Comparative Study of Cache \\ Eviction Algorithms\par}
 \rule{.9\linewidth}{.6pt}\\[1.5cm]
 \vspace*{2mm}
 {\Large
+
 \begin{tabular}{l}
-{\bf Author:} ~~student name ~~~~ (student number)
+{\bf Author:} Laura Stampf (2701672)
 \end{tabular}
 }
+
 \vspace*{1.5cm}
+
 \begin{tabular}{ll}
-{\it 1st supervisor:} & ~~supervisor name \\
-{\it daily supervisor:} & ~~supervisor name ~~~~ (company, if applicable) \\
-{\it 2nd reader:} & ~~supervisor name
+{\it 1st supervisor:} & Wan Fokkink \\
+{\it daily supervisor:} & Wan Fokkink \\
+{\it 2nd reader:} & TBD \\
 \end{tabular}
+
 \vspace*{2cm}
 \textit{A thesis submitted in fulfillment of the requirements for\\ the VU Bachelor
 of Science degree in Computer Science }
 \vspace*{1cm}
-\today\\[4cm] % Date
+
+\today % Date
 \end{center}
+
 \newpage
 \end{document}
