--- a/sections/references.tex
+++ b/sections/references.tex
@@ -1,5 +1,9 @@
-\urlstyle{tt}
-\begin{otherlanguage}{australian}
-\setlength\bibitemsep{.2em}
-\printbibliography
-\end{otherlanguage}
+% \urlstyle{tt}
+% \begin{otherlanguage}{australian}
+% \setlength\bibitemsep{.2em}
+% \printbibliography
+% \end{otherlanguage}
+
+\renewcommand{\bibname}{References}
+\bibliographystyle{plain}
+\bibliography{resources/references.bib}
