Added contents overview

--- a/main.tex
+++ b/main.tex
@@ -60,6 +60,7 @@ of Science degree in Computer Science }
 \fancyhead[R]{ \leftmark}
 
 \newpage\input{sections/abstract.tex}
+\tableofcontents
 \newpage\input{sections/introduction.tex}
 \newpage\input{sections/background.tex}
 \newpage\input{sections/design.tex}
