Add outline for intro

--- a/report/main.tex
+++ b/report/main.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper, 11pt]{report}
 \usepackage{graphicx}
+\usepackage{xcolor} % colors
 \usepackage{lipsum}
 \usepackage{fancyhdr} % used for header customization
 \usepackage{todonotes}
