--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -1,7 +1,15 @@
 \chapter{Introduction}
 
-\lipsum
+\outline{What is the cache and why is it important}
 
-\lipsum
+\lipsum[1]
 
-\lipsum
+\outline{How does the cache decide what to evict => introduce cache eviction policies}
+
+\lipsum[1]
+
+\outline{Different types of cache eviction algorithms. Not all are used in practice}
+
+\lipsum[1]
+
+\outline{}
