--- a/report/resources/commands.tex
+++ b/report/resources/commands.tex
@@ -1,3 +1,5 @@
 \newcommand{\todolaura}[1]{\todo[inline, color=purple!30]{#1}}
 
 \newcommand{\reminder}[1]{\todo[inline, color=orange!30]{#1}}
+
+\newcommand{\outline}[1]{{\color{blue}#1}}
