Change reference name from nsdi24 to sieve

--- a/report/resources/references.bib
+++ b/report/resources/references.bib
@@ -4,3 +4,12 @@
     title = {Some title},
     year = {2000}
 }
+
+@inproceedings{sieve,
+  author    = {Yazhuo Zhang and Juncheng Yang and Yao Yue and Ymir Vigfusson and K.V. Rashmi},
+  title     = {Sieve is Simpler than LRU: an Efficient Turn-Key Eviction Algorithm for Web Caches},
+  booktitle = {21st USENIX Symposium on Networked Systems Design and Implementation (NSDI 24)},
+  year      = {2024},
+  publisher = {USENIX Association},
+  url       = {https://www.usenix.org/conference/nsdi24/presentation/zhang-yazhuo}
+}
