--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -2,6 +2,8 @@
 
 \outline{What is the cache and why is it important}
 
+Sieve citation\cite{sieve}
+
 \lipsum[1]
 
 \outline{How does the cache decide what to evict => introduce cache eviction policies}
