--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -4,6 +4,10 @@
 
 Sieve citation\cite{sieve}
 
+Web caching overview citation\cite{web-cache-overview}
+
+S3-FIFO citation\cite{s3-fifo}
+
 \lipsum[1]
 
 \outline{How does the cache decide what to evict => introduce cache eviction policies}
