--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -2,12 +2,6 @@
 
 \outline{What is the cache and why is it important}
 
-Sieve citation\cite{sieve}
-
-Web caching overview citation\cite{web-cache-overview}
-
-S3-FIFO citation\cite{s3-fifo}
-
 \lipsum[1]
 
 \outline{How does the cache decide what to evict => introduce cache eviction policies}
@@ -18,4 +12,14 @@ S3-FIFO citation\cite{s3-fifo}
 
 \lipsum[1]
 
-\outline{}
+\section{Problem Statement}
+
+\outline{Something about increased complexity of newer algorithms compared to older ones?}
+
+\section{Research Question}
+
+\outline{Add research question here}
+
+\section{Thesis Outline}
+
+\outline{Outline of different chapters and briefly what topics are covered}
