Update results_dir to updated one in data_processing.ipynb

--- a/code/scripts/data_processing.ipynb
+++ b/code/scripts/data_processing.ipynb
@@ -26,11 +26,11 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "result_dir = \"../result\"\n",
+    "RESULTS_DIR = \"../results\"\n",
     "data = []\n",
     "\n",
-    "for filename in os.listdir(result_dir):\n",
-    "    filepath = os.path.join(result_dir, filename)\n",
+    "for filename in os.listdir(RESULTS_DIR):\n",
+    "    filepath = os.path.join(RESULTS_DIR, filename)\n",
     "    with open(filepath, \"r\") as f:\n",
     "        for line in f:\n",
     "            # Example line:\n",
@@ -50,8 +50,7 @@
     "                    \"unique\": int(objects)/int(reqs),\n",
     "                    \"objects\": objects,\n",
     "                    \"requests\": reqs,\n",
-    "                    \"miss_ratio\": miss_ratio,\n",
-    "                    # \"filename\": filename\n",
+    "                    \"miss_ratio\": miss_ratio\n",
     "                })\n",
     "            else:\n",
     "                print(f\"Something went wrong. Filename {filename}, Parts: {parts}\")\n",
