--- a/code/scripts/data_processing.ipynb
+++ b/code/scripts/data_processing.ipynb
@@ -25,8 +25,8 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
+    "from dir_paths import RESULTS_DIR\n",
     "\n",
-    "RESULTS_DIR = \"../results\"\n",
     "data = []\n",
     "\n",
     "for filename in os.listdir(RESULTS_DIR):\n",
