Fix figure names for zipfian curves all on one plot with vs without log scale

--- a/code/scripts/data_visualisation.ipynb
+++ b/code/scripts/data_visualisation.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "650996be",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,8 @@
     "\n",
     "    if save_fig:\n",
     "        os.makedirs(FIGURES_DIR, exist_ok=True)\n",
-    "        plt.savefig(os.path.join(FIGURES_DIR, \"zipfian_curves_all.pdf\"), bbox_inches='tight')\n",
+    "        filename = \"zipfian_curves_all_log.pdf\" if log_scale else \"zipfian_curves_all.pdf\"\n",
+    "        plt.savefig(os.path.join(FIGURES_DIR, filename), bbox_inches='tight')\n",
     "\n",
     "    plt.show()\n",
     "\n",
