--- a/code/scripts/data_processing.ipynb
+++ b/code/scripts/data_processing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "id": "c59e0fcf",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
        "[1600 rows x 5 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from dir_paths import DATA_DIR\n",
+    "from dir_paths import DATA_DIR, PROCESSED_DATA_DIR\n",
     "import re\n",
     "\n",
     "data_files_info = []\n",
@@ -182,6 +182,8 @@
     "            })\n",
     "\n",
     "data_df = pd.DataFrame(data_files_info)\n",
+    "os.makedirs(PROCESSED_DATA_DIR, exist_ok=True)\n",
+    "data_df.to_pickle(os.path.join(PROCESSED_DATA_DIR, \"data_df.pkl\"))\n",
     "data_df"
    ]
   },
@@ -195,10 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "id": "9347f4c7",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Relative cache sizes: [0.003, 0.01, 0.03, 0.1, 0.2, 0.4, 0.8]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -399,7 +408,7 @@
        "[23358 rows x 9 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +416,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from dir_paths import RESULTS_DIR\n",
+    "from dir_paths import RESULTS_DIR, PROCESSED_DATA_DIR\n",
     "import re\n",
     "from math import floor, log10\n",
     "\n",
@@ -478,6 +487,11 @@
     "            })\n",
     "\n",
     "results_df = pd.DataFrame(results_data)\n",
+    "os.makedirs(PROCESSED_DATA_DIR, exist_ok=True)\n",
+    "results_df.to_pickle(os.path.join(PROCESSED_DATA_DIR, \"results_df.pkl\"))\n",
+    "\n",
+    "relative_cache_sizes = sorted(results_df['cache_size_relative_rounded'].unique())\n",
+    "print(f\"Relative cache sizes: {relative_cache_sizes}\")\n",
     "results_df"
    ]
   },
