--- a/report/sections/conclusion.tex
+++ b/report/sections/conclusion.tex
@@ -1,7 +1,13 @@
 \chapter{Conclusion}
 
-\lipsum
-
 \section{Future Work}
 
 \outline{Ideas for future work}
+
+- test with proprietary traces
+
+- more traces need to be available for use! (cite twitter-analysis here)
+
+- running same algorithms on different production traces grouped by use case, and seeing whether there are trends there. for example, social media trends could be very different to others maybe
+
+- looking at throughput as well, since not only efficiency matters lol
