--- a/report/resources/commands.tex
+++ b/report/resources/commands.tex
@@ -1,9 +1,17 @@
-\newcommand{\todolaura}[1]{\todo[inline, color=purple!30]{#1}}
+\newcommand{\TODO}[1]{\todo[inline, color=purple!30]{#1}}
 
 \newcommand{\reminder}[1]{\todo[inline, color=orange!30]{#1}}
 
+% \newcommand{\outline}[1]{%
+%   \ifthenelse{\boolean{showoutline}}%
+%     {\textcolor{blue}{#1}}%
+%     {}%
+% }
+
 \newcommand{\outline}[1]{%
   \ifthenelse{\boolean{showoutline}}%
-    {\textcolor{blue}{#1}}%
+    {\vspace{1em}\noindent{\color{blue}\small{#1}}}%
     {}%
 }
+
+\newcommand{\code}[1]{\texttt{#1}}
