--- a/report/resources/references.bib
+++ b/report/resources/references.bib
@@ -1,12 +1,13 @@
+#######################################################################################
+RESEARCH PAPERS
 
 @inproceedings{sieve,
   author = {Zhang, Yazhuo and Yang, Juncheng and Yue, Yao and Vigfusson, Ymir and Rashmi, K. V.},
-  title = {SIEVE is simpler than LRU: an efficient turn-key eviction algorithm for web caches},
+  title = {{SIEVE is simpler than LRU: an efficient turn-key eviction algorithm for web caches}},
   year = {2024},
   isbn = {978-1-939133-39-7},
   publisher = {USENIX Association},
   address = {USA},
-  abstract = {Caching is an indispensable technique for low-cost and fast data serving. The eviction algorithm, at the heart of a cache, has been primarily designed to maximize efficiency-- reducing the cache miss ratio. Many eviction algorithms have been designed in the past decades. However, they all trade off throughput, simplicity, or both for higher efficiency. Such a compromise often hinders adoption in production systems.This work presents SIEVE, an algorithm that is simpler than LRU and provides better than state-of-the-art efficiency and scalability for web cache workloads. We implemented SIEVE in five production cache libraries, requiring fewer than 20 lines of code changes on average. Our evaluation on 1559 cache traces from 7 sources shows that SIEVE achieves up to 63.2\% lower miss ratio than ARC. Moreover, SIEVE has a lower miss ratio than 9 state-of-the-art algorithms on more than 45\% of the 1559 traces, while the next best algorithm only has a lower miss ratio on 15\%. SIEVE's simplicity comes with superior scalability as cache hits require no locking. Our prototype achieves twice the throughput of an optimized 16- thread LRU implementation. SIEVE is more than an eviction algorithm; it can be used as a cache primitive to build advanced eviction algorithms just like FIFO and LRU.},
   booktitle = {Proceedings of the 21st USENIX Symposium on Networked Systems Design and Implementation},
   articleno = {68},
   numpages = {18},
@@ -36,10 +37,91 @@
   address = {New York, NY, USA},
   url = {https://doi.org/10.1145/3600006.3613147},
   doi = {10.1145/3600006.3613147},
-  abstract = {As a cache eviction algorithm, FIFO has a lot of attractive properties, such as simplicity, speed, scalability, and flash-friendliness. The most prominent criticism of FIFO is its low efficiency (high miss ratio).In this work, we demonstrate a simple, scalable FIFO-based algorithm with three static queues (S3-FIFO). Evaluated on 6594 cache traces from 14 datasets, we show that S3-FIFO has lower miss ratios than state-of-the-art algorithms across traces. Moreover, S3-FIFO's efficiency is robust --- it has the lowest mean miss ratio on 10 of the 14 datasets. FIFO queues enable S3-FIFO to achieve good scalability with 6\texttimes{} higher throughput compared to optimized LRU at 16 threads.Our insight is that most objects in skewed workloads will only be accessed once in a short window, so it is critical to evict them early (also called quick demotion). The key of S3-FIFO is a small FIFO queue that filters out most objects from entering the main cache, which provides a guaranteed demotion speed and high demotion precision.},
   booktitle = {Proceedings of the 29th Symposium on Operating Systems Principles},
   pages = {130-149},
   numpages = {20},
   location = {Koblenz, Germany},
   series = {SOSP '23}
 }
+
+@inproceedings{web-cache-performance,
+    author = {Hurley, R. T. and Li, B. Y.},
+    title = {A performance investigation of web caching architectures},
+    year = {2008},
+    isbn = {9781605581019},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    url = {https://doi.org/10.1145/1370256.1370291},
+    doi = {10.1145/1370256.1370291},
+    abstract = {Web caching has been recognized as an effective approach to improve performance by storing frequently-accessed documents from originating servers at storage sites "closer" to requesting clients in order to reduce the load on the network bandwidth which in turn can reduce user response time. In this paper, we examine the performance of various architectures for cache cooperation in a web environment. The architectures under consideration include: distributed, hierarchical, and a hybrid of the two. A hierarchical web caching architecture utilizes a series of caches placed at different levels of the network (i.e. client, institutional, regional, and national) and user requests are satisfied at the lowest level possible (the first one that stores the desired document). Distributed web caching incorporates multiple cooperating caches all at the same level. The hybrid approach chosen in this paper contains a hierarchy of distributed caches in the hopes of exploiting advantages from both distributed and hierarchical caching. Using simulation as the tool, we compare the performance (mean response time, overall cache hit rates) of these architectures under a variety of different scenarios in an attempt to identify the conditions under which each is beneficial.},
+    booktitle = {Proceedings of the 2008 C3S2E Conference},
+    pages = {205–213},
+    numpages = {9},
+    keywords = {web caching architecture, resource management, performance modeling, distributed systems},
+    location = {Montreal, Quebec, Canada},
+    series = {C3S2E '08}
+}
+
+@inproceedings{internet-zipf,
+    author = {Guo, Lei and Tan, Enhua and Chen, Songqing and Xiao, Zhen and Zhang, Xiaodong},
+    title = {Does internet media traffic really follow Zipf-like distribution?},
+    year = {2007},
+    isbn = {9781595936394},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    url = {https://doi.org/10.1145/1254882.1254929},
+    doi = {10.1145/1254882.1254929},
+    booktitle = {Proceedings of the 2007 ACM SIGMETRICS International Conference on Measurement and Modeling of Computer Systems},
+    pages = {359–360},
+    numpages = {2},
+    keywords = {Zipf-like, media, stretched exponential},
+    location = {San Diego, California, USA},
+    series = {SIGMETRICS '07}
+}
+
+@inproceedings {twitter-analysis,
+    author = {Juncheng Yang and Yao Yue and K. V. Rashmi},
+    title = {A large scale analysis of hundreds of in-memory cache clusters at Twitter},
+    booktitle = {14th USENIX Symposium on Operating Systems Design and Implementation (OSDI 20)},
+    year = {2020},
+    isbn = {978-1-939133-19-9},
+    pages = {191--208},
+    url = {https://www.usenix.org/conference/osdi20/presentation/yang},
+    publisher = {USENIX Association},
+    month = nov
+}
+
+@article{cachesim,
+  author       = {Jian Liu and
+                  Yuxin Chen and
+                  Hao Ding},
+  title        = {CacheSim: {A} cache simulation framework for evaluating caching algorithms
+                  on resource-constrained edge devices},
+  journal      = {SoftwareX},
+  volume       = {29},
+  pages        = {102018},
+  year         = {2025},
+  url          = {https://doi.org/10.1016/j.softx.2024.102018},
+  doi          = {10.1016/J.SOFTX.2024.102018},
+  timestamp    = {Mon, 03 Mar 2025 22:23:15 +0100},
+  biburl       = {https://dblp.org/rec/journals/softx/LiuCD25.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+#######################################################################################
+C STUFF
+
+@online{llvm_diagnostics,
+  author = {{LLVM Project}},
+  title = {{Clang Compiler User's Manual}},
+  howpublished = {\url{https://clang.llvm.org/docs/UsersManual.html#diagnostics}},
+  year = {2025}
+}
+
+@online{cppreference_inttypes,
+  author = {{cppreference.com}},
+  title = {{Fixed width integer types (since C99)}},
+  howpublished = {\url{https://en.cppreference.com/w/c/types/integer}},
+  note = {Accessed: 2025-06-02}
+}
+
